# second_project

./: .gitignore  Heesang.ipynb  Hyeon_SOO_EDA.ipynb  Hyeon_soo.ipynb  Hyeon_soo_eda2.ipynb  Hyeong_Uk.ipynb  README.md  joon.ipynb  joon_catboost.ipynb  joon_logistic.ipynb  joon_test.ipynb  junick.ipynb  junick2.ipynb  junick_Catboost.ipynb  junick_XGboost.ipynb  junick_machine.ipynb  junick_return_analysis.ipynb  junick_통계분석.ipynb  main.py  pyproject.toml  전처리통합.ipynb  최종모델.ipynb  코드병합.ipynb  현수2차분석.ipynb  현수_CB.ipynb  현수_CTGAN.ipynb  현수_DTree.ipynb  현수_EDA.ipynb  현수_eda2.ipynb  형욱 xgb모델링.ipynb  형욱 로지스틱 모델링.ipynb  형욱 통계검정.ipynb  희상_통계분석.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
코드 통합/: 02_모델_통계_김효준.ipynb  1_통계_김현수.ipynb  1_통계_김형욱.ipynb  1_통계_유희상.ipynb  1_통계_조준익.ipynb  2.모델(최종모델)_유희상.ipynb  2_모델(XGboost)_조준익.ipynb  2_모델(xgboost+smotenc)_김형욱.ipynb  2_모델_김현수.ipynb  3. predict_current.ipynb  3_수익성 분석_조준익.ipynb
