[project]
name = "2nd-dormitory-evening-roll-call"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "imbalanced-learn>=0.14.1",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pingouin>=0.6.0",
    "scikit-learn>=1.8.0",
    "scikit-posthocs>=0.12.0",
    "scipy>=1.17.1",
    "sdv>=1.32.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]
